--- a/lab02/zhou-bio.html
+++ b/lab02/zhou-bio.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Ziyan Zhou's Biography</h1>
         <p>
-        Hello, welcome to my portfolio, my name is Ziyan Zhou, and I am a fifth-year architecture student at Syracuse University. I am interested in parametric design and urban planning, and I’d like to explore and how new digital inventions and tools can be applied to architectural design in the future to create different immersive experiences for visitors. I am skilled in using design, model-building, and drawing software like <strong>Adobe Suite, Rhino, Sketchup, AutoCAD, Revit, and Twinmotion</strong>. I am also able to build physical models precisely and am familiar with research resources like ArcGIS. My native language is Mandarin, but I can also speak English and Spanish.
+        Hello, welcome to my portfolio, my name is Ziyan Zhou, and I am a fifth-year architecture student at Syracuse University. I am interested in parametric design and urban planning, and I’d like to explore and how new digital inventions and tools can be applied to architectural design in the future to create different immersive experiences for visitors. I'm skilled in using design, model-building, and drawing software like <strong>Adobe Suite, Rhino, Sketchup, AutoCAD, Revit, and Twinmotion</strong>. I am also able to build physical models precisely and am familiar with research resources like ArcGIS. My native language is Mandarin, but I can also speak English and Spanish.
         </p>
         
         <h2>Personal Information</h2>
