--- a/lab02/zhou-bio.html
+++ b/lab02/zhou-bio.html
@@ -16,8 +16,7 @@
         </p>
 
         <h2>My Skills</h2>
-        <ul>
-            <li>Drawing</li>
+            <p>Drawing</p>
                 <ul>
                     <li>Color Pencil</li>
                     <li>Sketching</li>
@@ -25,23 +24,22 @@
                     <li>Adobe Photoshop</li>
                     <li>Adobe Illustrator</li>
                 </ul>
-            <li>Cooking</li>
+            <p>Cooking</p>
                 <ul>
                     <li>Chinese Cuisine</li>
                     <li>Baking</li>
                 </ul>
-            <li>Video Editing</li>
+            <p>Video Editing</p>
                 <ul>
                     <li>Adobe Premiere</li>
                 </ul>
-            <li>3D Model Making</li>
+            <p>3D Model Making</p>
                 <ul>
                     <li>Rhinoceros</li>
                     <li>Sketch Up</li>
                     <li>AutoDesk Revit</li>
                     <li>3D Printing</li>
                 </ul>
-        </ul>
         <hr>
         <p>&#169;2020</p>
     </body>
